# openBLAS_tests_with_CI

./: .gitignore  CMakeLists.txt  build.sh  main.cpp  tests.py
.github/workflows/: ci.yml
